--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
         android:allowBackup="true"
@@ -22,6 +23,7 @@
             </intent-filter>
         </activity>
         <service android:name="apolloner.eu.timer.TimerService"></service>
+        <activity android:name="SettingsActivity"></activity>
     </application>
 
 </manifest>
